# rpi-pico

./: README.md
CircuitPython/: README.md  p.py  test_gp20.py  text.py
MicroPython/: adc.py  blink.py  i2c.py  pwm.py
blink/: CMakeLists.txt  blink.c
blinkasm/: CMakeLists.txt  assembly.s  blinkasm.c
multicore/: CMakeLists.txt  multicore.c
